Section 2 Delete extra img files fixed bug with padding causing imgs to escape div Laid out section 2 Tweaked spacing

--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,7 @@ body {
 
 }
 
+
 /*header/footer stuff*/
 .header-container, .footer-container {
     width: 100%;
@@ -32,7 +33,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 0 5px 18px black
+    box-shadow: 0 5px 18px black;
+
 
 }
 
@@ -54,7 +56,8 @@ body {
     display: flex;
     flex-direction: column;
     margin-top: auto;
-    box-shadow: 5px 0 18px black
+    box-shadow: 5px 0 18px black;
+
 }
 
 /*header/footer stuff*/
@@ -66,15 +69,17 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
     height: 35%;
-    padding: 25px;
-    background-image: url("./vegetables-set-left-black-slate.jpg");
+    /*padding: 25px;*/
+    background-image: url("./waffle header.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 
 
 }
+
 
 /*sections stuff*/
 
@@ -90,8 +95,6 @@ body {
     width: 30rem;
     gap: 10px;
     color: #f4efeb;
-    /*background-color: #121e26;*/
-    /*background-color: rgba(18, 30, 38, .90);*/
     border-radius: 45px;
 
 
@@ -130,20 +133,52 @@ ul {
     list-style: none;
 
 }
-img{
-    height: 30rem;
-    width: 30rem;
+
+img {
+    height: 25rem;
+    width: 100%;
+
 }
 
-
-.section-2{
+/*section 2 stuff*/
+.section-2 {
+    box-sizing: border-box;
     display: flex;
+    padding: 60px 40px;
+    justify-content: center;
+    width: 100%;
 
 }
 
+.section-2-content {
+    display: flex;
+    gap: 20px;
+    /* justify-content: center;*/
+}
 
-.right-side{
+
+.left-side {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    width: 50%;
+    justify-content: center;
+    text-align: center;
+
+
+}
+
+.right-side {
     display: flex;
     flex-direction: column;
     gap: 30px;
+    width: 50%;
+    height: auto;
+
+
 }
+
+
+/*section 2 stuff*/
